# StadiumFlow-AI

./: .coverage  .gitignore  README.md  StadiumFlow_AI_PRD_text.md  implementation_plan.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/data/: matches.json  players.json  scenarios.json  stadium.json
backend/app/routers/: __init__.py  feedback.py  navigation.py  operations.py  simulation.py
backend/app/schemas/: navigation.py  recommendation.py  simulation.py  stadium.py
backend/app/services/: ai_fallback.py  ai_service.py  context_builder.py  live_state_manager.py  recommendation_engine.py  routing_engine.py  simulation_engine.py  timeline_engine.py
backend/tests/: test_ai_fallback.py  test_ai_service.py  test_api.py  test_context_builder.py  test_recommendations.py  test_routers.py  test_routing.py  test_simulation.py  test_timeline.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AICompanion.jsx  MatchCenter.jsx  ParallaxCard.jsx  PlayerCards.jsx  SimulatorControls.jsx  StadiumMap.jsx  TimelineView.jsx
frontend/src/pages/: FanDashboard.jsx  LandingPage.jsx  OperatorDashboard.jsx
frontend/src/services/: api.js  translator.js
frontend/src/tests/: App.test.jsx  setup.js
