[project]
name = "stadiumflow-ai"
version = "0.1.0"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.28.0",
    "pydantic==2.6.4",
    "pydantic-settings==2.2.1",
    "google-generativeai==0.4.1",
    "pytest==8.1.1",
    "httpx==0.27.0"
]

[tool.ruff]
target-version = "py312"
line-length = 250

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]
ignore = ["E501", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.black]
line-length = 120
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --import-mode=importlib"
testpaths = [
    "backend/tests",
]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]
